--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "watch": "tsc --watch",
     "test": "jest",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "keywords": [],
   "author": "",
@@ -22,6 +24,7 @@
     "@types/node": "^24.0.7",
     "eslint": "^9.30.0",
     "jest": "^30.0.3",
+    "prettier": "3.6.2",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
