--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,9 +17,31 @@ env:
   
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
+  check-code:
+    name: "Lint, Format, and Test"
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+        
+      - name: Run lint
+        run: npm run lint
+
+      - name: Run prettier
+        run: npm run format:check
+
+      - name: Run tests
+        run: npm run test
   build:
-    # The type of runner that the job will run on
+    needs: check-code
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
