--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,21 +6,21 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main", "dev" ]
+    branches: ['main', 'dev']
   pull_request:
-    branches: [ "main", "dev" ]
+    branches: ['main', 'dev']
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 env:
   NODE_VERSION: '22'
-  
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   check-code:
-    name: "Lint, Format, and Test"
+    name: 'Lint, Format, and Test'
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v4
 
@@ -31,7 +31,7 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-        
+
       - name: Run lint
         run: npm run lint
 
